--- a/electronic.html
+++ b/electronic.html
@@ -317,7 +317,7 @@
          <div class="container">
             <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
             <div class="input_bt">
-               <input type="text" class="mail_bt" placeholder="Your Email" name="Your Email">
+               <input type="text" class="mail_bt" placeholder="pwcnovasales@gmail.com" name="PWCNOVASALES">
                <span class="subscribe_bt" id="basic-addon2"><a href="#">Subscribe</a></span>
             </div>
             <div class="footer_menu">
