Added a Contact Page and a Redirect
Added a Contact Page and a Redirect from the main index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                      <a href="index.html">Home</a>
                      <a href="fashion.html">Ladders</a>
                      <a href="electronic.html">Appliances</a>
-                     <a href="jewellery.html">Contact Us</a>
+                     <a href="Contact.html">Contact Us</a>
                   </div>
                   <span class="toggle_icon" onclick="openNav()"><img src="images/toggle-icon.png"></span>
                   <div class="dropdown">
