--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                                  <p class="price_text">Price  <span style="color: #262626;">$ 30</span></p>
                                  <div class="tshirt_img"><img src="images/dress-shirt-img.png"></div>
                                  <div class="btn_main">
-                                    <div class="buy_bt"><a href="#">Buy Now</a></div>
-                                    <div class="seemore_bt"><a href="#">See More</a></div>
+                                    <div class="buy_bt"><a href="#">Quantity: 15</a></div>
+                                    <div class="seemore_bt"><a href="#">MSRP: $200 Our Price: $150</a></div>
                                  </div>
                               </div>
                            </div>
